change source of temperature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="js/main.js"></script>
   <script type="text/javascript">
     setInterval(function () {
-      fetchTemperature("https://thingspeak.com/channels/9/field/2.json");
+      fetchTemperature("https://thingspeak.com/channels/12397/field/4.json");
     }, 1000);
   </script>
 </body>
